# podcast_creation_agent

./: .env.example  .gitignore  CLAUDE.md  README 2.md  README.md  create-readme 2.md  login.py  main 2.py  publish_headless.py  pyproject 2.toml  pyproject.toml  test_full_flow.py  test_session.py
.cursor/rules/: create-prd.mdc  create-readme.mdc  generate-tasks.mdc
app/: __init__.py
docs/: cover-art.md  generate_cover.py
src/pipeline/: config.py  main.py  notebooklm.py  sessions.py  spotify.py  transcribe.py
src/spotify_publish/: explore.py  inspect_upload.py  publish_headless.py  test_upload.py
tasks/: prd-podcast-creation-automation.md  tasks-prd-podcast-creation-automation.md
